the_project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: todo-app:1.12
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: todo-image-data
              mountPath: /data
      volumes:
        - name: todo-image-data
          persistentVolumeClaim:
            claimName: todo-image-pvc
