the_project/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - name: http
      protocol: TCP
      port: 3001
      targetPort: 3001
