the_project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
